--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #889523; }
+  background: #b637c3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f905e8; }
+  background: #f20433; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f24618; }
+  background: #80f50b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a9f3ff; }
+  background: #984f9d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1d014b; }
+  background: #9c2725; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #a7ec4a; }
+  background: #f83e10; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #fb549e; }
+  background: #15fd7c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5df8d5; }
+  background: #ecd035; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a06736; }
+  background: #e8765f; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e6e285; }
+  background: #f75782; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9a9ecb; }
+  background: #1205ea; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2bc20b; }
+  background: #4e6feb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e47975; }
+  background: #492bf7; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a61edb; }
+  background: #bc5350; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #12c251; }
+  background: #c39b9b; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5fd942; }
+  background: #db50a0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #fb0a2b; }
+  background: #6caf99; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #157924; }
+  background: #9d03c6; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #967792; }
+  background: #d197f6; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #62c51a; }
+  background: #179978; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #ac20f9; }
+  background: #d4af9e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #d89103; }
+  background: #a11d48; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #812930; }
+  background: #52da22; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6b43bf; }
+  background: #facd4f; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1cff7d; }
+  background: #c170a8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #20fef2; }
+  background: #9e80b2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #6e68f5; }
+  background: #2d1786; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #9ffa4f; }
+  background: #4841a5; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #976b2b; }
+  background: #62269a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #269812; }
+  background: #4fb8e7; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7eef72; }
+  background: #e2c778; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #a05941; }
+  background: #c49673; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #222329; }
+  background: #3b07c5; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d0c151; }
+  background: #682af8; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #82dbd2; }
+  background: #99ce06; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6a61a2; }
+  background: #ffade6; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #bcb413; }
+  background: #9210b5; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #666f4e; }
+  background: #25124c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0c282b; }
+  background: #903deb; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f3e77c; }
+  background: #209d6f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d9f666; }
+  background: #dc7d93; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #abf32f; }
+  background: #2c0a31; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #e75379; }
+  background: #e415ae; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #372b77; }
+  background: #65771f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #04dc83; }
+  background: #9a1ecf; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #2e051b; }
+  background: #f3e230; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d20108; }
+  background: #a38142; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #7ae78c; }
+  background: #ce3221; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #955de6; }
+  background: #c6797e; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c49a5a; }
+  background: #7dd412; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #0e75fb; }
+  background: #7d2d84; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #84fa2f; }
+  background: #39e078; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #1e0956; }
+  background: #28614e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #816672; }
+  background: #63e6fd; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #206f94; }
+  background: #c35ad4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a4afa5; }
+  background: #340950; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b95e9d; }
+  background: #752356; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cdb6a2; }
+  background: #12306f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c2375e; }
+  background: #4a9e08; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #02f2fb; }
+  background: #1b6c92; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #42ad43; }
+  background: #01b989; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ae39ba; }
+  background: #10e3ec; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1c074a; }
+  background: #6d379f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #58370a; }
+  background: #56ed4a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #5568e9; }
+  background: #56c4a8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #cda05c; }
+  background: #10ebe3; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d82c8a; }
+  background: #4f3f0d; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a3d891; }
+  background: #5b85e6; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a3cadb; }
+  background: #61fb15; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a45d78; }
+  background: #f75130; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #c07451; }
+  background: #b3a79a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #8c0466; }
+  background: #8a17bb; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #9457f5; }
+  background: #0d2266; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #82109c; }
+  background: #1428c6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #25b53b; }
+  background: #125d65; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #3de0e7; }
+  background: #5d63d5; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b8fc2d; }
+  background: #da8789; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #76090d; }
+  background: #095ca2; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #625d60; }
+  background: #784a85; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #85157d; }
+  background: #974346; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7c525c; }
+  background: #1744f7; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #9b5bde; }
+  background: #8e2c4f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #070da3; }
+  background: #152e90; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e88e65; }
+  background: #05829c; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #932b40; }
+  background: #1e2cc5; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #a06dc6; }
+  background: #0a1d1e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d1849e; }
+  background: #aaf528; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ab9585; }
+  background: #e56f4d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #5eedd5; }
+  background: #ca4722; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #104b9d; }
+  background: #8bba12; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8f7ddf; }
+  background: #5f4cce; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #819de3; }
+  background: #0aa339; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #084313; }
+  background: #dd423e; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #7d867a; }
+  background: #2fefd9; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #944f40; }
+  background: #2f19af; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #366b31; }
+  background: #e5d521; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #1c5d2c; }
+  background: #a7e87f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #a10fb2; }
+  background: #445652; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #162839; }
+  background: #dc790b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #7bfb33; }
+  background: #97730f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12105,7 +12105,7 @@ input:checked + .sliders-Not .not-blue-bg {
     padding: 15px;
     background: #fff;
     z-index: 2;
-    top: 34px;
+    top: 38px;
     left: 6px; }
   .multiselect .dropdown-search-bar {
     border-radius: 5px;
