--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1707,6 +1707,7 @@ input:checked+.sliders-Not .not-blue-bg {
 
 /* The container */
 .check-container {
+  color: #9A9A9A;
   display: block;
   position: relative;
   padding-left: 30px;
