--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b637c3; }
+  background: #8e509a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f20433; }
+  background: #f79961; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #80f50b; }
+  background: #06325f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #984f9d; }
+  background: #fde021; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9c2725; }
+  background: #8a3569; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f83e10; }
+  background: #51a23f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #15fd7c; }
+  background: #8ce767; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #ecd035; }
+  background: #3d7d33; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e8765f; }
+  background: #b766e3; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #f75782; }
+  background: #d730ff; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #1205ea; }
+  background: #6fe8a0; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #4e6feb; }
+  background: #233c4b; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #492bf7; }
+  background: #23fae2; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #bc5350; }
+  background: #43fa8a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c39b9b; }
+  background: #527115; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #db50a0; }
+  background: #68cdd9; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #6caf99; }
+  background: #fcdc9f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #9d03c6; }
+  background: #d22dae; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d197f6; }
+  background: #691201; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #179978; }
+  background: #619362; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d4af9e; }
+  background: #e4e86a; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #a11d48; }
+  background: #2355e7; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #52da22; }
+  background: #66e432; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #facd4f; }
+  background: #c79f3c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c170a8; }
+  background: #401bc9; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9e80b2; }
+  background: #708bf2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2d1786; }
+  background: #6abebd; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4841a5; }
+  background: #51aa3f; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #62269a; }
+  background: #3a9199; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #4fb8e7; }
+  background: #d5a745; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e2c778; }
+  background: #6c3d2e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c49673; }
+  background: #8b140d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3b07c5; }
+  background: #8ab5b3; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #682af8; }
+  background: #286bcd; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #99ce06; }
+  background: #946575; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ffade6; }
+  background: #d1c7b2; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9210b5; }
+  background: #25aa5f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #25124c; }
+  background: #654fd9; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #903deb; }
+  background: #b2d638; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #209d6f; }
+  background: #1ed655; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #dc7d93; }
+  background: #52f06f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #2c0a31; }
+  background: #948ddb; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #e415ae; }
+  background: #279615; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #65771f; }
+  background: #11e1f1; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9a1ecf; }
+  background: #55fb81; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f3e230; }
+  background: #b41cb5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #a38142; }
+  background: #c7dec3; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ce3221; }
+  background: #1f0d0f; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c6797e; }
+  background: #3f0d7e; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #7dd412; }
+  background: #bc23f2; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7d2d84; }
+  background: #bd50e3; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #39e078; }
+  background: #c19fca; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #28614e; }
+  background: #0347b6; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #63e6fd; }
+  background: #3be835; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #c35ad4; }
+  background: #0a5b06; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #340950; }
+  background: #a8d0ce; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #752356; }
+  background: #641b89; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #12306f; }
+  background: #16ac0c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4a9e08; }
+  background: #95dbfe; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #1b6c92; }
+  background: #1d60cb; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #01b989; }
+  background: #765fec; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #10e3ec; }
+  background: #8f032a; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #6d379f; }
+  background: #ed515a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #56ed4a; }
+  background: #4a4db6; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #56c4a8; }
+  background: #b5326d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #10ebe3; }
+  background: #ab2f8d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4f3f0d; }
+  background: #9c53d9; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5b85e6; }
+  background: #ca3271; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #61fb15; }
+  background: #f29efa; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f75130; }
+  background: #11a3d7; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b3a79a; }
+  background: #3919fe; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #8a17bb; }
+  background: #bdf11e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0d2266; }
+  background: #6a4a07; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #1428c6; }
+  background: #ef9bf0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #125d65; }
+  background: #27f9c2; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #5d63d5; }
+  background: #f9b1fc; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #da8789; }
+  background: #b24b3e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #095ca2; }
+  background: #3ff3ff; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #784a85; }
+  background: #192575; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #974346; }
+  background: #38619a; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1744f7; }
+  background: #b60555; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8e2c4f; }
+  background: #a2c99b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #152e90; }
+  background: #5beb61; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #05829c; }
+  background: #38daf3; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1e2cc5; }
+  background: #87ecca; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #0a1d1e; }
+  background: #72c2bf; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #aaf528; }
+  background: #9bda84; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e56f4d; }
+  background: #73e0f6; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ca4722; }
+  background: #09dfef; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8bba12; }
+  background: #dfe11e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #5f4cce; }
+  background: #50c490; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0aa339; }
+  background: #6cb570; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #dd423e; }
+  background: #d24aef; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2fefd9; }
+  background: #ae485f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #2f19af; }
+  background: #78690c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e5d521; }
+  background: #8790f8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a7e87f; }
+  background: #5aff1e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #445652; }
+  background: #44d0c5; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #dc790b; }
+  background: #d14c04; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #97730f; }
+  background: #2c2912; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12142,6 +12142,7 @@ input:checked + .sliders-Not .not-blue-bg {
 
 /* The container */
 .check-container {
+  color: #9A9A9A;
   display: block;
   position: relative;
   padding-left: 30px;
