add filter html other pages

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8e509a; }
+  background: #17885a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f79961; }
+  background: #e843db; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #06325f; }
+  background: #48ab09; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #fde021; }
+  background: #eeb735; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #8a3569; }
+  background: #35fbfc; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #51a23f; }
+  background: #6b4437; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8ce767; }
+  background: #3e7017; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3d7d33; }
+  background: #bd1747; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b766e3; }
+  background: #e01d5c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d730ff; }
+  background: #43efcc; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6fe8a0; }
+  background: #f14ab3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #233c4b; }
+  background: #ccb937; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #23fae2; }
+  background: #72526a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #43fa8a; }
+  background: #8f62c9; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #527115; }
+  background: #19c1d2; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #68cdd9; }
+  background: #392f40; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #fcdc9f; }
+  background: #f4d20e; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d22dae; }
+  background: #7c8ce3; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #691201; }
+  background: #c99347; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #619362; }
+  background: #e11d58; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #e4e86a; }
+  background: #909e94; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #2355e7; }
+  background: #40b4d2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #66e432; }
+  background: #e57e8c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #c79f3c; }
+  background: #591d17; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #401bc9; }
+  background: #e2f82a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #708bf2; }
+  background: #3809f9; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #6abebd; }
+  background: #93af54; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #51aa3f; }
+  background: #a426d7; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3a9199; }
+  background: #064229; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d5a745; }
+  background: #a097aa; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6c3d2e; }
+  background: #fca5f1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #8b140d; }
+  background: #cafea6; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #8ab5b3; }
+  background: #3241d1; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #286bcd; }
+  background: #04eaad; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #946575; }
+  background: #59d5ab; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d1c7b2; }
+  background: #c98465; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #25aa5f; }
+  background: #0412c1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #654fd9; }
+  background: #627f5e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b2d638; }
+  background: #655882; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1ed655; }
+  background: #c44346; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #52f06f; }
+  background: #0f51e5; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #948ddb; }
+  background: #308fb4; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #279615; }
+  background: #84d24d; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #11e1f1; }
+  background: #fac664; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #55fb81; }
+  background: #7c9a98; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b41cb5; }
+  background: #cb6058; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c7dec3; }
+  background: #85e06c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1f0d0f; }
+  background: #c32edd; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #3f0d7e; }
+  background: #56fe0d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #bc23f2; }
+  background: #31d2f1; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #bd50e3; }
+  background: #7f1374; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c19fca; }
+  background: #6ccc09; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0347b6; }
+  background: #67d876; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3be835; }
+  background: #470e98; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #0a5b06; }
+  background: #e4c326; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a8d0ce; }
+  background: #3b9ac5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #641b89; }
+  background: #ea0d61; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #16ac0c; }
+  background: #999f10; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #95dbfe; }
+  background: #c1ef33; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #1d60cb; }
+  background: #8422aa; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #765fec; }
+  background: #641757; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8f032a; }
+  background: #246d39; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ed515a; }
+  background: #777c4d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #4a4db6; }
+  background: #e153e8; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b5326d; }
+  background: #3be0ae; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ab2f8d; }
+  background: #edd705; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #9c53d9; }
+  background: #5edb0f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ca3271; }
+  background: #067a56; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #f29efa; }
+  background: #088738; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #11a3d7; }
+  background: #2c3d2e; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #3919fe; }
+  background: #37d527; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #bdf11e; }
+  background: #8de968; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6a4a07; }
+  background: #92c532; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ef9bf0; }
+  background: #87113d; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #27f9c2; }
+  background: #155442; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f9b1fc; }
+  background: #59c98a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b24b3e; }
+  background: #7a045d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #3ff3ff; }
+  background: #6bfcc9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #192575; }
+  background: #53e26b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #38619a; }
+  background: #89f8b6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b60555; }
+  background: #c5a05c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #a2c99b; }
+  background: #724914; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5beb61; }
+  background: #7f33cb; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #38daf3; }
+  background: #0f9b7f; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #87ecca; }
+  background: #092309; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #72c2bf; }
+  background: #3b6046; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #9bda84; }
+  background: #0311b8; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #73e0f6; }
+  background: #cebdb3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #09dfef; }
+  background: #d97013; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #dfe11e; }
+  background: #95b0ae; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #50c490; }
+  background: #abe379; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6cb570; }
+  background: #c24888; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d24aef; }
+  background: #573bb2; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ae485f; }
+  background: #256951; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #78690c; }
+  background: #45d1b8; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8790f8; }
+  background: #f12d2c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5aff1e; }
+  background: #25ca13; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #44d0c5; }
+  background: #ed1af7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #d14c04; }
+  background: #44f796; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #2c2912; }
+  background: #ccbbbb; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9846,7 +9846,7 @@ table .bold-heading {
   text-align: right; }
 
 .theme-button-small {
-  padding: 12px 20px;
+  padding: 12px 22px;
   font-size: 16px;
   background: #a57dff;
   border: 0px;
